--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora IMC</title>
+    <link href="assets\lib\bootstrap-5.3.0-alpha1\dist\css\bootstrap.min.css">
 </head>
 <body>
     <h1>Teste</h1>    
+    <script src="assets\lib\bootstrap-5.3.0-alpha1\dist\js\bootstrap.min.js"></script>
 </body>
 </html>
