--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
-    <link href="assets\lib\bootstrap-5.3.0-alpha1\dist\css\bootstrap.min.css">
+    <link rel="stylesheet" href="assets/lib/bootstrap-5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
-    <h1>Teste</h1>    
-    <script src="assets\lib\bootstrap-5.3.0-alpha1\dist\js\bootstrap.min.js"></script>
+    <main>
+        <section id="section-calculator" class="container d-flex justify-content-center align-items-center">
+            <div class="calculator-wrapper">
+                <h1>Calculadora IMC</h1>
+                <form method="post">
+                    <div class="mb-3">
+                        <label for="imc-calculator-height" class="form-label">Altura</label>
+                        <div class="input-group">
+                            <input type="number" min="0" step="0.01" class="form-control" id="imc-calculator-height" aria-describedby="imcCalculatorHeight">
+                            <span class="input-group-text">M</span>
+                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="imc-calculator-weight" class="form-label">Peso</label>
+                        <div class="input-group">
+                            <input type="number" min="0" step="0.01" class="form-control" id="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
+                            <span class="input-group-text">Kg</span>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </form>
+            </div>
+        </section>
+    </main>  
+    <script src="assets\lib\bootstrap-5.3.0\dist\js\bootstrap.min.js"></script>
 </body>
 </html>
