Inserte init value on input

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                     <div class="mb-3">
                         <label for="imc-calculator-height" class="form-label">Altura</label>
                         <div class="input-group">
-                            <input type="number" min="0" step="0.01" class="form-control" id="imc-calculator-height" aria-describedby="imcCalculatorHeight">
+                            <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" aria-describedby="imcCalculatorHeight">
                             <span class="input-group-text">M</span>
                         </div>
                     </div>
                     <div class="mb-3">
                         <label for="imc-calculator-weight" class="form-label">Peso</label>
                         <div class="input-group">
-                            <input type="number" min="0" step="0.01" class="form-control" id="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
+                            <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
                             <span class="input-group-text">Kg</span>
                         </div>
                     </div>
