Apply JS calculator

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <section id="section-calculator" class="container d-flex justify-content-center align-items-center">
+        <section id="section-calculator" class="container-fluid d-flex justify-content-center align-items-center">
             <div class="calculator-wrapper">
                 <h1>Calculadora IMC</h1>
                 <form method="post">
@@ -28,11 +28,12 @@
                             <span class="input-group-text">Kg</span>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-primary">Calcular</button>
                 </form>
             </div>
         </section>
     </main>  
     <script src="assets\lib\bootstrap-5.3.0\dist\js\bootstrap.min.js"></script>
+    <script type="module" src="assets/js/Init.js"></script>
 </body>
 </html>
