--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section id="section-calculator" class="container-fluid d-flex justify-content-center align-items-center">
             <div class="calculator-wrapper">
                 <h1>Calculadora IMC</h1>
-                <form method="post">
+                <form id="imc-calculator-form" method="post">
                     <div class="mb-3">
                         <label for="imc-calculator-height" class="form-label">Altura</label>
                         <div class="input-group">
