--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 <body>
     <main>
         <section id="section-calculator" class="container-fluid d-flex justify-content-center align-items-center">
-            <div class="calculator-wrapper">
-                <h1>Calculadora IMC</h1>
-                <form id="imc-calculator-form" method="post">
-                    <div class="mb-3">
-                        <label for="imc-calculator-height" class="form-label">Altura</label>
-                        <div class="input-group">
-                            <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" name="imc-calculator-height" aria-describedby="imcCalculatorHeight">
-                            <span class="input-group-text">M</span>
+            <div class="card calculator-wrapper">
+                <h1 class="card-header">Calculadora IMC</h1>
+                <div class="card-body">
+                    <form id="imc-calculator-form" method="post">
+                        <div class="mb-3">
+                            <label for="imc-calculator-height" class="form-label">Altura</label>
+                            <div class="input-group">
+                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" name="imc-calculator-height" aria-describedby="imcCalculatorHeight">
+                                <span class="input-group-text">M</span>
+                            </div>
                         </div>
-                    </div>
-                    <div class="mb-3">
-                        <label for="imc-calculator-weight" class="form-label">Peso</label>
-                        <div class="input-group">
-                            <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" name="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
-                            <span class="input-group-text">Kg</span>
+                        <div class="mb-3">
+                            <label for="imc-calculator-weight" class="form-label">Peso</label>
+                            <div class="input-group">
+                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" name="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
+                                <span class="input-group-text">Kg</span>
+                            </div>
                         </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Calcular</button>
-                </form>
+                        <button type="submit" class="btn btn-primary">Calcular</button>
+                    </form>
+                </div>
             </div>
         </section>
     </main>  
