Show calculator result

--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
                                 <span class="input-group-text">Kg</span>
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-primary">Calcular</button>
+                        <div class="d-flex justify-content-end">
+                            <button type="submit" class="btn btn-primary">Calcular</button>
+                        </div>
                     </form>
+                    <div class="d-none" data-tpl="calculator-result">
+                        <span data-tpl="calculator-result-value"></span>
+                    </div>
                 </div>
             </div>
         </section>
