--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         </div>
                     </form>
                     <div class="d-none" data-tpl="calculator-result">
+                        <span>Resultado: </span>
                         <span data-tpl="calculator-result-value"></span>
                     </div>
                 </div>
