--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                         <div class="mb-3">
                             <label for="imc-calculator-height" class="form-label">Altura</label>
                             <div class="input-group">
-                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" name="imc-calculator-height" aria-describedby="imcCalculatorHeight">
+                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" name="imc-calculator-height" aria-describedby="imcCalculatorHeight" required>
                                 <span class="input-group-text">M</span>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label for="imc-calculator-weight" class="form-label">Peso</label>
                             <div class="input-group">
-                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" name="imc-calculator-weight" aria-describedby="imcCalculatorWeight">
+                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" name="imc-calculator-weight" aria-describedby="imcCalculatorWeight" required>
                                 <span class="input-group-text">Kg</span>
                             </div>
                         </div>
@@ -33,7 +33,25 @@
                             <button type="submit" class="btn btn-primary">Calcular</button>
                         </div>
                     </form>
-                    <div class="d-none" data-tpl="calculator-result">
+                    <div /*class="d-none"*/ data-tpl="calculator-result">
+                        <div class="progress-stacked">
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%">
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%">
+                              <div class="progress-bar"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%">
+                              <div class="progress-bar bg-success"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%">
+                              <div class="progress-bar bg-info"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%">
+                              <div class="progress-bar bg-danger"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="40" aria-valuemax="100" style="width: 0%">
+                            </div>
+                        </div>
                         <span>Resultado: </span>
                         <span data-tpl="calculator-result-value"></span>
                     </div>
