--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <button type="submit" class="btn btn-primary">Calcular</button>
                         </div>
                     </form>
-                    <div /*class="d-none"*/ data-tpl="calculator-result">
+                    <div class="d-none mt-3" data-tpl="calculator-result">
                         <div class="progress-stacked">
                             <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
                             </div>
@@ -51,6 +51,7 @@
                             </div>
                             <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
                             </div>
+                            <span data-tpl="calculator-result-marker"></span>
                         </div>
                         <span>Resultado: </span>
                         <span data-tpl="calculator-result-value"></span>
