--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
     <link rel="stylesheet" href="assets/lib/bootstrap-5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/lib/fontawesome-6.3.0/all.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
 </head>
 <body>
