--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             </div>
                             <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
                             </div>
-                            <span data-tpl="calculator-result-marker"></span>
+                            <span class="fa-solid fa-location-pin" data-tpl="calculator-result-marker"></span>
                         </div>
                         <span>Resultado: </span>
                         <span data-tpl="calculator-result-value"></span>
