--- a/index.html
+++ b/index.html
@@ -35,25 +35,29 @@
                         </div>
                     </form>
                     <div class="d-none mt-3" data-tpl="calculator-result">
-                        <div class="progress-stacked">
-                            <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
-                            </div>
-                            <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%" title="Normal">
-                              <div class="progress-bar"></div>
-                            </div>
-                            <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
-                              <div class="progress-bar bg-success"></div>
-                            </div>
-                            <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
-                              <div class="progress-bar bg-info"></div>
-                            </div>
-                            <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%" title="Obesidade grau II">
-                              <div class="progress-bar bg-danger"></div>
-                            </div>
-                            <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
-                            </div>
+
+                        <div class="calculator-result-bar">
+                            <div class="progress-stacked">
+                                <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
+                                </div>
+                                <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%" title="Normal">
+                                  <div class="progress-bar"></div>
+                                </div>
+                                <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
+                                  <div class="progress-bar bg-success"></div>
+                                </div>
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
+                                  <div class="progress-bar bg-info"></div>
+                                </div>
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%" title="Obesidade grau II">
+                                  <div class="progress-bar bg-danger"></div>
+                                </div>
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
+                                </div>
+                            </div>                            
                             <span class="fa-solid fa-location-pin" data-tpl="calculator-result-marker"></span>
                         </div>
+
                         <span>Resultado: </span>
                         <span data-tpl="calculator-result-value"></span>
                     </div>
