--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </form>
                     <div class="d-none mt-3" data-tpl="calculator-result">
 
-                        <div class="calculator-result-bar">
+                        <div id="calculator-result-bar">
                             <div class="progress-stacked">
                                 <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
                                 </div>
@@ -55,7 +55,7 @@
                                 <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
                                 </div>
                             </div>                            
-                            <span class="fa-solid fa-location-pin" data-tpl="calculator-result-marker"></span>
+                            <span id="calculator-result-marker" class="fa-solid fa-location-pin"></span>
                         </div>
 
                         <span>Resultado: </span>
