--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
                                 </div>
                             </div>                            
-                            <span id="calculator-result-marker" class="fa-solid fa-location-pin"></span>
+                            <span class="fa-solid fa-location-pin calculator-result-marker" data-tpl="calculator-result-marker"></span>
                         </div>
 
                         <span>Resultado: </span>
