--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="assets/lib/fontawesome-6.3.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/theme.css">
 </head>
+
 <body>
     <main>
         <section id="section-calculator" class="container-fluid d-flex justify-content-center align-items-center">
@@ -19,14 +21,18 @@
                         <div class="mb-3">
                             <label for="imc-calculator-height" class="form-label">Altura</label>
                             <div class="input-group">
-                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-height" name="imc-calculator-height" aria-describedby="imcCalculatorHeight" required>
+                                <input type="number" min="0" step="0.01" value="0" class="form-control"
+                                    id="imc-calculator-height" name="imc-calculator-height"
+                                    aria-describedby="imcCalculatorHeight" required>
                                 <span class="input-group-text">M</span>
                             </div>
                         </div>
                         <div class="mb-3">
                             <label for="imc-calculator-weight" class="form-label">Peso</label>
                             <div class="input-group">
-                                <input type="number" min="0" step="0.01" value="0" class="form-control" id="imc-calculator-weight" name="imc-calculator-weight" aria-describedby="imcCalculatorWeight" required>
+                                <input type="number" min="0" step="0.01" value="0" class="form-control"
+                                    id="imc-calculator-weight" name="imc-calculator-weight"
+                                    aria-describedby="imcCalculatorWeight" required>
                                 <span class="input-group-text">Kg</span>
                             </div>
                         </div>
@@ -38,24 +44,32 @@
 
                         <div id="calculator-result-bar">
                             <div class="progress-stacked">
-                                <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
+                                <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0"
+                                    aria-valuemax="18.4" style="width: 0%" title="Magreza">
                                 </div>
-                                <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%" title="Normal">
-                                  <div class="progress-bar"></div>
+                                <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5"
+                                    aria-valuemax="24.9" style="width: 25%" title="Normal">
+                                    <div class="progress-bar"></div>
                                 </div>
-                                <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
-                                  <div class="progress-bar bg-success"></div>
+                                <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25"
+                                    aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
+                                    <div class="progress-bar bg-success"></div>
                                 </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
-                                  <div class="progress-bar bg-info"></div>
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau I"
+                                    aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
+                                    <div class="progress-bar bg-warning"></div>
                                 </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%" title="Obesidade grau II">
-                                  <div class="progress-bar bg-danger"></div>
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau II"
+                                    aria-valuemin="35" aria-valuemax="39.9" style="width: 25%"
+                                    title="Obesidade grau II">
+                                    <div class="progress-bar bg-danger"></div>
                                 </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
+                                <div class="progress" role="progressbar" aria-label="Obesidade grau III"
+                                    aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
                                 </div>
-                            </div>                            
-                            <span class="fa-solid fa-location-pin calculator-result-marker" data-tpl="calculator-result-marker"></span>
+                            </div>
+                            <span class="fa-solid fa-location-pin calculator-result-marker text-primary"
+                                data-tpl="calculator-result-marker"></span>
                         </div>
 
                         <span>Resultado: </span>
@@ -64,8 +78,9 @@
                 </div>
             </div>
         </section>
-    </main>  
+    </main>
     <script src="assets\lib\bootstrap-5.3.0\dist\js\bootstrap.min.js"></script>
     <script type="module" src="assets/js/Init.js"></script>
 </body>
+
 </html>
