--- a/index.html
+++ b/index.html
@@ -69,11 +69,10 @@
                                 </div>
                             </div>
                             <span class="fa-solid fa-location-pin calculator-result-marker text-primary"
-                                data-tpl="calculator-result-marker"></span>
+                                data-tpl="calculator-result-marker">
+                                <span class="text-dark" data-tpl="calculator-result-value"></span>
+                            </span>
                         </div>
-
-                        <span>Resultado: </span>
-                        <span data-tpl="calculator-result-value"></span>
                     </div>
                 </div>
             </div>
