--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             </div>
                             <span class="fa-solid fa-location-pin calculator-result-marker text-primary"
                                 data-tpl="calculator-result-marker">
-                                <span class="text-dark" data-tpl="calculator-result-value"></span>
+                                <span id="calculator-result-value" data-tpl="calculator-result-value"></span>
                             </span>
                         </div>
                     </div>
