--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
                             <button type="submit" class="btn btn-primary">Calcular</button>
                         </div>
                     </form>
-                    <div class="d-none mt-5" data-tpl="calculator-result">
-                        <div id="calculator-result-bar">
-                            <div class="progress-stacked">
-                                <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
-                                </div>
-                                <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%" title="Normal">
-                                    <div class="progress-bar"></div>
-                                </div>
-                                <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
-                                    <div class="progress-bar bg-success"></div>
-                                </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
-                                    <div class="progress-bar bg-warning"></div>
-                                </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%" title="Obesidade grau II">
-                                    <div class="progress-bar bg-danger"></div>
-                                </div>
-                                <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
-                                </div>
+                </div>
+                <div class="card-body d-none" data-tpl="calculator-result">
+                    <div id="calculator-result-bar" class="mt-5">
+                        <div class="progress-stacked">
+                            <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
                             </div>
-                            <span class="fa-solid fa-location-pin calculator-result-marker text-primary"
-                                data-tpl="calculator-result-marker">
-                                <span id="calculator-result-value" data-tpl="calculator-result-value"></span>
-                            </span>
+                            <div class="progress" role="progressbar" aria-label="Normal" aria-valuemin="18.5" aria-valuemax="24.9" style="width: 25%" title="Normal">
+                                <div class="progress-bar"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Sobrepeso" aria-valuemin="25" aria-valuemax="29.9" style="width: 25%" title="Sobrepeso">
+                                <div class="progress-bar bg-success"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau I" aria-valuemin="30" aria-valuemax="34.9" style="width: 25%" title="Obesidade grau I">
+                                <div class="progress-bar bg-warning"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau II" aria-valuemin="35" aria-valuemax="39.9" style="width: 25%" title="Obesidade grau II">
+                                <div class="progress-bar bg-danger"></div>
+                            </div>
+                            <div class="progress" role="progressbar" aria-label="Obesidade grau III" aria-valuemin="40" aria-valuemax="100" style="width: 0%" title="Obesidade grau III">
+                            </div>
                         </div>
+                        <span class="fa-solid fa-location-pin calculator-result-marker text-primary"
+                            data-tpl="calculator-result-marker">
+                            <span id="calculator-result-value" data-tpl="calculator-result-value"></span>
+                        </span>
                     </div>
                 </div>
             </div>
