--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                         </div>
                     </form>
                 </div>
-                <div class="card-body d-none" data-tpl="calculator-result">
+                <div class="card-body border-top d-none" data-tpl="calculator-result">
+                    <h6>Resultado</h6>
                     <div id="calculator-result-bar" class="mt-5">
                         <div class="progress-stacked">
                             <div class="progress" role="progressbar" aria-label="Magreza" aria-valuemin="0" aria-valuemax="18.4" style="width: 0%" title="Magreza">
