--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Calculadora IMC</title>
     <link rel="stylesheet" href="assets/lib/bootstrap-5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/lib/fontawesome-6.3.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/Css/theme.css">
+    <link rel="stylesheet" href="assets/Css/ImcCalculator.css">
 </head>
 
 <body>
