--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         </div>
                     </form>
                 </div>
-                <div id="calculator-result" class="card-body border-top d-none" data-tpl="calculator-result">
+                <div id="calculator-result" class="card-body border-top" data-tpl="calculator-result">
                     <h6>Resultado</h6>
                     <div id="calculator-result-bar" class="mt-5">
                         <div class="progress-stacked">
