--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                 </form>
             </div>
-            <div id="imc-calculator-result" class="card-body border-top d-none" data-tpl="imc-calculator-result">
+            <div id="imc-calculator-result" class="card-body border-top" data-tpl="imc-calculator-result">
                 <h6>Resultado</h6>
                 <div id="calculator-result-bar" class="mt-5">
                     <div>
