--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         </div>
                         <div class="imc-calculator-graph" data-tpl="imc-calculator-graph" data-tpl-min="40" data-tpl-max="999" style="width: 0%" title="Obesidade grau III">
                         </div>
-                        <span class="fa-solid fa-location-pin calculator-result-marker text-primary"data-tpl="calculator-result-marker">
-                            <span id="calculator-result-value" data-tpl="calculator-result-value"></span>
+                        <span id="imc-calculator-result-marker" class="fa-solid fa-location-pin calculator-result-marker text-primary" data-tpl="calculator-result-marker">
+                            <span data-tpl="calculator-result-value"></span>
                         </span>
                     </div>
                 </div>
