--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </form>
                 <div id="imc-calculator-result" class="card-body border-top" data-tpl="imc-calculator-result">
                     <h6>Resultado</h6>
-                    <div class="mt-5 position-relative">
+                    <div class="mt-5 position-relative d-flex">
                         <div class="imc-calculator-graph" data-tpl="imc-calculator-graph" data-tpl-min="0" data-tpl-max="0" style="width: 0%" title="Magreza">
                         </div>
                         <div class="imc-calculator-graph bg-success" data-tpl="imc-calculator-graph" data-tpl-min="18.5" data-tpl-max="24.9" style="width: 25%" title="Normal">
